--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -12,7 +12,7 @@ proxies:
     grpc-service-name: trojan
 - name: danuterong01b
   type: trojan
-  server: chat.sociomile.com
+  server: 104.17.2.81
   port: 443
   password: f3478f17-80b2-4ec2-aa30-50bc839f43bb
   udp: true
