--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -1,15 +1,33 @@
 proxies:
+- name: danugayeng01flex1
+  type: vmess
+  server: 104.17.3.81
+  port: 80
+  password: aba099a6-3f2b-48ce-ac00-b53f0e103c9b
+  alterId: 0
+  cipher: auto
+  udp: true
+  skip-cert-verify: true
+  tls: false
+  servername: sg.dogayengvpn.my.id
+  network: ws
+  ws-opts:
+    path: /vmess
+    headers:
+      Host: sg.dogayengvpn.my.id
 - name: danugayeng01a
   type: trojan
-  server: do-gayeng.potatonc.my.id
+  server: 172.67.199.34
   port: 443
   password: aba099a6-3f2b-48ce-ac00-b53f0e103c9b
   udp: true
-  sni: teams.live.com
+  sni: do-gayeng.potatonc.my.id
   skip-cert-verify: true
-  network: grpc
-  grpc-opts:
-    grpc-service-name: trojan
+  network: ws
+  ws-opts:
+    path: /trojan
+    headers:
+      Host: do-gayeng.potatonc.my.id
 - name: danuterong01b
   type: trojan
   server: 172.67.199.34
