--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -1,4 +1,17 @@
 proxies:
+- name: danu06
+  type: trojan
+  server: 172.67.199.34
+  port: 443
+  password: 44912509-364c-4b1a-91bf-ad449e03f561
+  udp: true
+  sni: sg-ctn.sshpremium.my.id
+  skip-cert-verify: true
+  network: websocket
+  ws-opts:
+    path: /trojanws
+    headers:
+      Host: sg-ctn.sshpremium.my.id
 - name: danugayeng01a
   type: trojan
   server: 172.67.199.34
