--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -1,13 +1,13 @@
 proxies:
 - name: danu06
   type: trojan
-  server: 172.67.199.34
+  server: wsindo.aryossh.my.id
   port: 443
   password: 44912509-364c-4b1a-91bf-ad449e03f561
   udp: true
   sni: sg-ctn.sshpremium.my.id
   skip-cert-verify: true
-  network: websocket
+  network: ws
   ws-opts:
     path: "/trojanws"
     headers:
