--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -5,13 +5,13 @@ proxies:
   port: 443
   password: 44912509-364c-4b1a-91bf-ad449e03f561
   udp: true
-  sni: sg-ctn.sshpremium.my.id
+  sni: sg-ctn.aryossh.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: sg-ctn.sshpremium.my.id
+      Host: sg-ctn.aryossh.my.id
 - name: danugayeng01a
   type: trojan
   server: 172.67.199.34
