--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -1,7 +1,7 @@
 proxies:
 - name: danuWs06
   type: trojan
-  server: wsindo.aryossh.my.id
+  server: 172.67.199.34
   port: 443
   password: 44912509-364c-4b1a-91bf-ad449e03f561
   udp: true
