--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -1,4 +1,17 @@
 proxies:
+- name: danuGo01
+  type: trojan
+  server: 172.67.199.34
+  port: 443
+  password: 128c21ef-d2cf-4a15-a3bb-c90f22448ef9
+  udp: true
+  sni: sg-ctn.sshpremium.my.id
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: "/trojanws"
+    headers:
+      Host: sg-ctn.sshpremium.my.id
 - name: danuWs06
   type: trojan
   server: 172.67.199.34
