--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -116,32 +116,32 @@ proxies:
     path: "/trojanws"
     headers:
       Host: id-magna.sshpremium.my.id
-- name: danuWS10a
+- name: danuWs10a
   type: trojan
-  server: hohm.microsoft.com
+  server: 104.20.74.141
   port: 443
   password: cbb998e8-99db-4508-b052-24f347e53630
   udp: true
-  sni: id-qword5.aryossh.my.id
+  sni: id-qword5.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: id-qword5.aryossh.my.id
+      Host: id-qword5.sshpremium.my.id
 - name: danuWs10b
   type: trojan
-  server: 104.21.21.147
+  server: 104.20.75.141
   port: 443
   password: cbb998e8-99db-4508-b052-24f347e53630
   udp: true
-  sni: id-qword5.aryossh.my.id
+  sni: id-qword5.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: id-qword5.aryossh.my.id
+      Host: id-qword5.sshpremium.my.id
 - name: danuGrpc04
   type: trojan
   server: wsindo.aryossh.my.id
