--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -116,32 +116,32 @@ proxies:
     path: "/trojanws"
     headers:
       Host: id-magna.sshpremium.my.id
-- name: danuWs10a
+- name: danuWs10aNew
   type: trojan
-  server: 104.20.74.141
+  server: api.midtrans.com
   port: 443
-  password: cbb998e8-99db-4508-b052-24f347e53630
+  password: f9f60cb6-22e3-4629-8ab5-5230ee38ec8b
   udp: true
-  sni: id-qword5.sshpremium.my.id
+  sni: sg-ctn.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: id-qword5.sshpremium.my.id
-- name: danuWs10b
+      Host: sg-ctn.sshpremium.my.id
+- name: danuWs10bNew
   type: trojan
   server: 104.20.75.141
   port: 443
-  password: cbb998e8-99db-4508-b052-24f347e53630
+  password: f9f60cb6-22e3-4629-8ab5-5230ee38ec8b
   udp: true
-  sni: id-qword5.sshpremium.my.id
+  sni: sg-ctn.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: id-qword5.sshpremium.my.id
+      Host: sg-ctn.sshpremium.my.id
 - name: danuGrpc04
   type: trojan
   server: wsindo.aryossh.my.id
