--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -90,9 +90,9 @@ proxies:
     path: "/trojanws"
     headers:
       Host: sg-ctn.sshpremium.my.id
-- name: danuWs10aNew
+- name: danuWs10a
   type: trojan
-  server: 104.20.74.141
+  server: 172.67.199.34
   port: 443
   password: f9f60cb6-22e3-4629-8ab5-5230ee38ec8b
   udp: true
@@ -103,9 +103,9 @@ proxies:
     path: "/trojanws"
     headers:
       Host: sg-ctn.sshpremium.my.id
-- name: danuWs10bNew
+- name: danuWs10b
   type: trojan
-  server: 104.20.75.141
+  server: 104.21.21.147
   port: 443
   password: f9f60cb6-22e3-4629-8ab5-5230ee38ec8b
   udp: true
@@ -144,7 +144,7 @@ proxies:
   port: 443
   password: 2d0c0e9e-1bc7-473c-8943-3408cfb0f8cb
   udp: true
-  sni: teams.live.com
+  sni: 172.67.199.34
   skip-cert-verify: true
   network: grpc
   grpc-opts:
@@ -160,3 +160,11 @@ proxies:
   network: grpc
   grpc-opts:
     grpc-service-name: trojan-grpc
+- name: danugfw01
+  type: trojan
+  server: sg-do2.sshpremium.my.id
+  port: 443
+  password: f85f8b68-2b62-42c9-81cb-c353cb902301
+  udp: true
+  sni: teams.live.com
+  skip-cert-verify: true
