--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -1,5 +1,5 @@
 proxies:
-- name: danuWsGo01
+- name: danuWs01
   type: trojan
   server: 172.67.199.34
   port: 443
@@ -116,7 +116,7 @@ proxies:
     path: "/trojanws"
     headers:
       Host: sg-ctn.sshpremium.my.id
-- name: danuGrpc04a
+- name: danuGrpc04
   type: trojan
   server: 172.67.199.34
   port: 443
