--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -1,9 +1,9 @@
 proxies:
-- name: danuWs01
+- name: danuWs01-IP34
   type: trojan
   server: 172.67.199.34
   port: 443
-  password: 128c21ef-d2cf-4a15-a3bb-c90f22448ef9
+  password: aac6f2f6-7f6a-4dd9-a014-8c55f9bf3b61
   udp: true
   sni: sg-ctn.sshpremium.my.id
   skip-cert-verify: true
@@ -12,6 +12,45 @@ proxies:
     path: "/trojanws"
     headers:
       Host: sg-ctn.sshpremium.my.id
+- name: danuWs01-Midtrans
+  type: trojan
+  server: midtrans.com
+  port: 443
+  password: aac6f2f6-7f6a-4dd9-a014-8c55f9bf3b61
+  udp: true
+  sni: sg-ctn.sshpremium.my.id
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: "/trojanws"
+    headers:
+      Host: sg-ctn.sshpremium.my.id
+- name: danuWs01-Identrust
+  type: trojan
+  server: crl.identrust.com
+  port: 443
+  password: aac6f2f6-7f6a-4dd9-a014-8c55f9bf3b61
+  udp: true
+  sni: sg-ctn.sshpremium.my.id
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: "/trojanws"
+    headers:
+      Host: sg-ctn.sshpremium.my.id
+- name: danuWs01-SNI
+  type: trojan
+  server: sg-ctn.sshpremium.my.id
+  port: 443
+  password: aac6f2f6-7f6a-4dd9-a014-8c55f9bf3b61
+  udp: true
+  sni: gomarketplacecontent-cf.zoom.us
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: "/trojanws"
+    headers:
+      Host: gomarketplacecontent-cf.zoom.us
 - name: danuWs02
   type: trojan
   server: 172.67.199.34
