--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -90,9 +90,9 @@ proxies:
     path: "/trojanws"
     headers:
       Host: sg-do.sshpremium.my.id
-- name: danuWs03-Identrust
+- name: danuWs03
   type: trojan
-  server: crl.identrust.com
+  server: 172.67.199.34
   port: 443
   password: 4ca9b740-88cf-46ed-a4d5-35322b45d28f
   udp: true
