--- a/AKRAB_BACKUP_001.yaml
+++ b/AKRAB_BACKUP_001.yaml
@@ -1,7 +1,7 @@
 proxies:
-- name: danuWs01-20.226
+- name: danuWs01-Vision+
   type: trojan
-  server: 104.18.20.226
+  server: 104.21.235.171
   port: 443
   password: aac6f2f6-7f6a-4dd9-a014-8c55f9bf3b61
   udp: true
@@ -12,172 +12,146 @@ proxies:
     path: "/trojanws"
     headers:
       Host: sg-ctn.sshpremium.my.id
-- name: danuWs01-SNIb
+- name: danuWs02=>danu04-Vision+
   type: trojan
-  server: sg-ctn.sshpremium.my.id
-  port: 443
-  password: aac6f2f6-7f6a-4dd9-a014-8c55f9bf3b61
-  udp: true
-  sni: gomarketplacefront-cf.zoom.us
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: "/trojanws"
-    headers:
-      Host: gomarketplacefront-cf.zoom.us
-- name: danuWs01-SNI-TeamsLive
-  type: trojan
-  server: sg-ctn.sshpremium.my.id
-  port: 443
-  password: aac6f2f6-7f6a-4dd9-a014-8c55f9bf3b61
-  udp: true
-  sni: teams.live.com
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: "/trojanws"
-    headers:
-      Host: teams.live.com
-- name: danuWs02=>danu04-SNI-TeamsLive
-  type: trojan
-  server: sg-cth.sshpremium.my.id
+  server: 104.21.235.171
   port: 443
   password: 3605cc31-054b-4c71-9b1f-57fe23b48ce3
   udp: true
-  sni: teams.live.com
+  sni: sg-cth.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: teams.live.com
-- name: danuWs03-SNI-TeamsLive
+      Host: sg-cth.sshpremium.my.id
+- name: danuWs03-Vision+
   type: trojan
-  server: sg-cth.sshpremium.my.id
+  server: 104.21.235.171
   port: 443
   password: 44b89e90-cbdd-44bd-886c-c72383b61ca3
   udp: true
-  sni: teams.live.com
+  sni: sg-cth.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: teams.live.com
-- name: danuWs04-SNI-TeamsLive
+      Host: sg-cth.sshpremium.my.id
+- name: danuWs04-Vision+
   type: trojan
-  server: sg-cth.sshpremium.my.id
+  server: 104.21.235.171
   port: 443
   password: 3605cc31-054b-4c71-9b1f-57fe23b48ce3
   udp: true
-  sni: teams.live.com
+  sni: sg-cth.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: teams.live.com
-- name: danuWs05-SNI-TeamsLive
+      Host: sg-cth.sshpremium.my.id
+- name: danuWs05-Vision+
   type: trojan
-  server: sg-ctn.sshpremium.my.id
+  server: 104.21.235.171
   port: 443
   password: 5ca60014-86b6-4314-a650-4d9cebfaf3b0
   udp: true
-  sni: teams.live.com
+  sni: sg-ctn.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: teams.live.com
-- name: danuWs06-SNI-TeamsLive
+      Host: sg-ctn.sshpremium.my.id
+- name: danuWs06-Vision+
   type: trojan
-  server: sg-ctn.sshpremium.my.id
+  server: 104.21.235.171
   port: 443
   password: 44912509-364c-4b1a-91bf-ad449e03f561
   udp: true
-  sni: teams.live.com
+  sni: sg-ctn.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: teams.live.com
-- name: danuWs07-SNI-TeamsLive
+      Host: sg-ctn.sshpremium.my.id
+- name: danuWs07-Vision+
   type: trojan
-  server: sg-ctn.sshpremium.my.id
+  server: 104.21.235.171
   port: 443
   password: e5f1074e-0271-4f89-b592-2a443e889b4b
   udp: true
-  sni: teams.live.com
+  sni: sg-ctn.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: teams.live.com
-- name: danuWs08-SNI-TeamsLive
+      Host: sg-ctn.sshpremium.my.id
+- name: danuWs08-Vision+
   type: trojan
-  server: sg-ctn.sshpremium.my.id
+  server: 104.21.235.171
   port: 443
   password: c3744259-5613-48c3-a57a-41047f96daf1
   udp: true
-  sni: teams.live.com
+  sni: sg-ctn.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: teams.live.com
-- name: danuWs09-SNI-TeamsLive
+      Host: sg-ctn.sshpremium.my.id
+- name: danuWs09-Vision+
   type: trojan
-  server: sg-cth.sshpremium.my.id
+  server: 104.21.235.171
   port: 443
   password: 925e4d12-eb6a-4aa7-ba8a-ac640b82557f
   udp: true
-  sni: teams.live.com
+  sni: sg-cth.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: teams.live.com
-- name: danuWs10-SNI-TeamsLive
+      Host: sg-cth.sshpremium.my.id
+- name: danuWs10-Vision+
   type: trojan
-  server: sg-ctn.sshpremium.my.id
+  server: 104.21.235.171
   port: 443
   password: f9f60cb6-22e3-4629-8ab5-5230ee38ec8b
   udp: true
-  sni: teams.live.com
+  sni: sg-ctn.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: teams.live.com
-- name: danuWs11-SNI-TeamsLive
+      Host: sg-ctn.sshpremium.my.id
+- name: danuWs11-Vision+
   type: trojan
-  server: sg-ctn.sshpremium.my.id
+  server: 104.21.235.171
   port: 443
   password: d0e27aeb-ae7f-4412-9a21-19cf08c55fb4
   udp: true
-  sni: teams.live.com
+  sni: sg-ctn.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: teams.live.com
-- name: danuWs12-SNI-TeamsLive
+      Host: sg-ctn.sshpremium.my.id
+- name: danuWs12-Vision+
   type: trojan
-  server: sg-do2.sshpremium.my.id
+  server: 104.21.235.171
   port: 443
   password: b6ff995c-aa70-4f6d-895c-6cf62960bc88
   udp: true
-  sni: teams.live.com
+  sni: sg-do2.sshpremium.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: "/trojanws"
     headers:
-      Host: teams.live.com
+      Host: sg-do2.sshpremium.my.id
